<resources>
    <string name="app_name">Code Factory</string>
    <string name="intro1_title">Learn anytime\n and anywhere</string>
    <string name="intro2_title">Find a course for you</string>
    <string name="intro3_title">Improve your skills</string>
    <string name="intro1_text">Quarantine is the perfect time to spend your\n day learning something new, from anywhere!</string>
    <string name="button_next">Next</string>
    <string name="button_lets">Let’s Start</string>
    <string name="menu_courses">Courses</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_setting">Setting</string>
    <string name="login_title">Log in</string>
    <string name="sign_up_title">Sign up</string>
    <string name="pin_code_link">Login with pin code</string>
    <string name="forgot_password_title">Forgot Password?</string>
    <string name="email_edittext">Email</string>
    <string name="password_edittext">Password</string>
    <string name="name_edittext">Name</string>
    <string name="create_account_link">Create your account</string>
    <string name="enter_password_title">Enter your email to recover your password</string>
    <string name="send_button">Send</string>
    <string name="back_button">Back</string>
    <string name="save_button">Save</string>
    <string name="change_title">Change password</string>
    <string name="confirm_button">Confirm</string>
    <string name="confirm_password_edittext">Confirm password</string>
    <string name="change_code_title">Confirm changes by code</string>
    <string name="code_title">A six-digit verification code has been sent by email</string>
    <string name="code_edittext">Code</string>
    <string name="error_validation">The data entered is incorrect</string>
    <string name="pin_code">Pin Code</string>
    <string name="confirm_pin_code">Confirm pin code</string>
    <string name="profile_courses">Your Courses</string>
    <string name="profile_saves">Saved</string>
    <string name="profile_payment">Payment</string>
    <string name="logout_title">Log out</string>
    <string name="notification_title">Notification</string>
    <string name="account_title">Account information</string>
    <string name="error_pin_code">Incorrect pin code</string>
    <string name="hello">Hello,</string>
    <string name="category">Category:</string>
    <string name="hour">h</string>
    <string name="minute">min</string>
    <string name="search">Search course</string>
    <string name="otp_code_text">OTR code:</string>
    <string name="otp_code_title">OTR code for password recovery:</string>
    <string name="send_email">Sending a letter...</string>
    <string name="about_corses_title">About the courses</string>
    <string name="duration_title">Duration</string>
    <string name="add_cart_button">Add to cart</string>
    <string name="save_courses_title">Save courses</string>
    <string name="result_title">Results</string>
    <string name="delete_buton">Delete</string>
    <string name="edit_button">Edit</string>
    <string name="buy_button">Buy</string>
    <string name="open_button">Open</string>
    <string name="create_courses_title">Create a new courses</string>
    <string name="name_course_title_custom">Enter the course name</string>
    <string name="about_course_title_custom">About the course</string>
    <string name="description_course_hint">Describe the course...</string>
    <string name="course_title_custom">Custom Course</string>
    <string name="add_lessons_button">Add a lessons</string>
    <string name="upload_image_button">Upload image</string>
    <string name="date_update">"Last update: "</string>
    <string name="add_toast">Successfully saved!</string>
    <string name="button_add_update">Saved</string>
    <string name="buy_toast">Purchase successful!</string>
    <string name="add_payplament_toast">Successful addition!</string>
    <string name="button_lessons">Lessons</string>
    <string name="button_tests">Tests</string>
    <string name="button_discuss">Discuss</string>
    <string name="title_lessons">Introduction</string>
    <string name="of"> of </string>
    <string name="lessons"> lessons</string>
    <string name="number_quize">Quize</string>
    <string name="begin_button">Begin</string>
    <string name="continue_button">Continue</string>
    <string name="incorrect_toast">Incorrect answer:</string>
    <string name="correct_toast">Correct answer:</string>
    <string name="passed">Test passed</string>
    <string name="failed">Test failed</string>
    <string name="write_comment">Write a comment...</string>
    <string name="rating">Raiting</string>
    <string name="error_saves1"> Course not saved</string>
    <string name="error_saves2">Try saving the course
again in a few minutes</string>
    <string name="error_payment1">No payment method</string>
    <string name="error_payment2">You don’t have any\n
payment method</string>
    <string name="error_payment3"> Payment method added</string>
    <string name="error_payment4">You can buy the course now.\n
Continue to payment.</string>
    <string name="error_saved3"> Course was saved</string>
    <string name="error_saved4">You can find this course in\n
your profile</string>
    <string name="error_course1"> Course not found</string>
    <string name="error_course2">Try searching the course with\n
a different keyword</string>
    <string name="error_result1">Congratulations</string>
    <string name="error_result2">Congratulations for getting\n
all the answers correct!</string>
    <string name="error_title">Error</string>
    <string name="error_description">An error occurred</string>

</resources>