<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:padding="25dp"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/button5"
        android:id="@+id/button_cancel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/name_courses_title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/create_courses_title"
        android:textSize="24sp"
        android:gravity="center_vertical|center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <TextView
    android:id="@+id/enter_courses_title"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:fontFamily="@font/rubik_medium"
    android:text="@string/name_course_title_custom"
    android:textSize="24sp"
    android:gravity="center_vertical|start"
    app:layout_constraintTop_toBottomOf="@+id/name_courses_title"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/enter_courses_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/button3"
        android:hint="@string/name_edittext"
        android:padding="15dp"
        android:id="@+id/edit_text_name_course"/>



    <ImageView
        android:layout_width="match_parent"
        android:layout_height="257dp"
        android:id="@+id/courses_illustration"
        android:src="@drawable/illustration14"
        android:layout_margin="15dp"
        android:scaleType="centerCrop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_name_course"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_bold"
        android:textSize="14sp"
        android:textColor="@color/accent2"
        android:textAlignment="center"
        android:id="@+id/upload_image"
        android:text="@string/upload_image_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courses_illustration"
        />



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/about_corses_title"
        android:textSize="24sp"
        android:layout_marginTop="20dp"
        android:textAlignment="textStart"
        android:id="@+id/about_courses_title"
        app:layout_constraintTop_toBottomOf="@+id/upload_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/about_courses_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/button3"
        android:hint="@string/description_course_hint"
        android:padding="15dp"
        android:maxLines="5"
        android:id="@+id/edit_text_description_course"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/duration_title"
        android:textSize="24sp"
        android:textAlignment="textStart"
        android:id="@+id/duration_title"
        app:layout_constraintBottom_toTopOf="@+id/edit_duration_course"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/add_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/button3"
        android:hint="@string/name_edittext"
        android:padding="15dp"
        android:layout_marginBottom="80dp"
        android:id="@+id/edit_duration_course"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button1"
        android:text="@string/add_cart_button"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="16dp"
        android:fontFamily="@font/rubik_medium"
        android:padding="15dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/add_button"/>
</androidx.constraintlayout.widget.ConstraintLayout>