<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:paddingTop="60dp"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/button5"
        android:id="@+id/button_cancel"
        android:layout_marginLeft="20dp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/image_illustration"
        android:src="@drawable/illustration4"
        android:layout_margin="15dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/forgot_password_title"
        android:textSize="24sp"
        android:textAlignment="center"
        android:id="@+id/text_singup"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik"
        android:text="@string/enter_password_title"
        android:textSize="14sp"
        android:textColor="@color/accent2"
        android:textAlignment="center"
        android:linksClickable="true"
        android:layout_margin="10dp"
        android:id="@+id/create_account_text"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button3"
        android:hint="@string/email_edittext"
        android:padding="18dp"
        android:layout_margin="10dp"
        android:textSize="14sp"
        android:textColorHint="@color/accent2"
        android:fontFamily="@font/rubik"
        android:id="@+id/email_edittext" />
<View
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:background="@color/white"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button1"
        android:text="@string/send_button"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="16dp"
        android:fontFamily="@font/rubik_medium"
        android:padding="15dp"
        android:layout_margin="10dp"
        android:id="@+id/singup_button"/>
</LinearLayout>