<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:paddingTop="60dp"
    android:orientation="vertical">



    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/image_illustration"
        android:src="@drawable/illustration8"
        android:layout_margin="15dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/change_code_title"
        android:textSize="24sp"
        android:textAlignment="center"
        android:id="@+id/text_singup"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik"
        android:text="@string/code_title"
        android:textSize="14sp"
        android:textColor="@color/accent2"
        android:textAlignment="center"
        android:linksClickable="true"
        android:layout_margin="10dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/code_edittext"
        android:textColorHint="@color/accent2"
        app:passwordToggleTint="@color/accent2"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button3"
            android:padding="18dp"
            android:layout_margin="10dp"
            android:textSize="14sp"
            android:fontFamily="@font/rubik"
            android:id="@+id/code_edittext"
            android:maxLength="6"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@color/white"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button1"
        android:text="@string/confirm_button"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="16dp"
        android:fontFamily="@font/rubik_medium"
        android:padding="15dp"
        android:layout_margin="10dp"
        android:id="@+id/singup_button"/>





</LinearLayout>