<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:paddingTop="60dp"
    android:orientation="vertical">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/image_illustration"
        android:src="@drawable/illustration10"
        android:layout_margin="15dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/change_title"
        android:textSize="24sp"
        android:textAlignment="center"
        android:id="@+id/text_singup"
        android:layout_margin="20dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_edittext"
        android:textColorHint="@color/accent2"
        app:passwordToggleTint="@color/accent2"
        app:passwordToggleEnabled="true"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button3"
            android:padding="18dp"
            android:layout_margin="10dp"
            android:textSize="14sp"
            android:fontFamily="@font/rubik"
            android:id="@+id/pincode_edittext"
            android:maxLength="8"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password_edittext"
        android:textColorHint="@color/accent2"
        app:passwordToggleTint="@color/accent2"
        app:passwordToggleEnabled="true"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button3"
            android:padding="18dp"
            android:layout_margin="10dp"
            android:textSize="14sp"
            android:fontFamily="@font/rubik"
            android:id="@+id/pincode_confirm_edittext"
            android:maxLength="8"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/white"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button1"
        android:text="@string/confirm_button"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="16dp"
        android:fontFamily="@font/rubik_medium"
        android:padding="15dp"
        android:layout_margin="10dp"
        android:id="@+id/confirm_button"/>
</LinearLayout>