<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="20dp"
    tools:context=".SecondFragment">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_cancel"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/button5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/profile_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:clickable="false"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/menu_profile"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/avatar_icon"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginTop="50dp"
        android:clickable="true"
        android:scaleType="centerCrop"
        android:src="@drawable/profile_icon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_title" />

    <ImageView
        android:id="@+id/avatar_rame"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:clickable="true"
        android:src="@drawable/avatar2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_title" />

    <LinearLayout
        android:id="@+id/linear_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatar_icon">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_courses_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button3"
            android:fontFamily="@font/rubik_medium"
            android:padding="20dp"
            android:text="@string/profile_courses"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="24sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_saved_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button3"
            android:fontFamily="@font/rubik_medium"
            android:padding="20dp"
            android:text="@string/profile_saves"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="24sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_payment_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button3"
            android:fontFamily="@font/rubik_medium"
            android:padding="20dp"
            android:text="@string/profile_payment"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/log_out_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/rubik"
            android:linksClickable="true"
            android:text="@string/logout_title"
            android:textAlignment="center"
            android:textColor="@color/accent2"
            android:textSize="14sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>